--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,17 @@
   ],
   "author": "Hamdi Mohamed",
   "dependencies": {
+    "async": "^3.2.0",
+    "child_process": "^1.0.2",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "image-downloader": "^3.5.0",
+    "imagemagick": "^0.1.3",
+    "jimp": "^0.10.3",
+    "lodash": "^4.17.15",
+    "os": "^0.1.1",
+    "path": "^0.12.7",
+    "sharp": "^0.25.2",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {}
